# anel

./: .gitignore  CMakeLists.txt  README.md  _create.h  _do.h  _done.h  _here.h  _if.h  _lets.h  _return.h  _while.h  compiler.hpp  env.hpp  evaluator.hpp  file.hpp  filereader.hpp  functions.hpp  instruction.hpp  main.cpp  name.hpp  parser.hpp  runtime.hpp  token.hpp  tokenizer.hpp  tstring.hpp  variables.hpp
docs/: index.md
pkg/: ins.sc  package.yaml
tests/: f.anl  test.anl
